fixes div expand and collapse, adjustments to some margins

--- a/styles/style.css
+++ b/styles/style.css
@@ -262,6 +262,7 @@ button.back-home{
 #create-quizz {
     background-color: #FAFAFA;
     width: 100vw;
+    overflow-y: auto;
 }
 
 #first-screen, #second-screen, #third-screen, #fourth-screen {
@@ -271,14 +272,23 @@ button.back-home{
     left: 100%;
     top: 0px;
     padding-top: 70px;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     background-color: #FAFAFA;
-    transition: .5s;
     overscroll-behavior: contain;
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: .5s;
+}
+.bottom-padding{
+    height: 20px;
+}
+#first-screen > *,
+#second-screen > *,
+#third-screen > *,
+#fourth-screen > * {
+    flex-shrink: 0;
 }
 #fourth-screen .quizz{
     width: 90vw;
@@ -303,14 +313,16 @@ button.back-home{
     flex-direction: column;
     background-color: #FFF;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
-    padding: 20px 16px 12px;
+    padding: 10px 16px 12px;
     margin-bottom: 25px;
+    border-bottom: solid 15px #FFFFFF;
 }
 
 .icon {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .icon ion-icon {
@@ -319,7 +331,8 @@ button.back-home{
 }
 
 #create-quizz .quizz-info.selected {
-    max-height: none;
+    max-height: 1000px;
+    border-bottom: 0px;
 }
 
 .quizz-info.selected ion-icon {
